kubernetes/apps/kube-system/cilium/gateway/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/issuer: letsencrypt-production
  labels:
    gateway-label: internal-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.10.99.71
  listeners:
    # catch all external http -> https
    - name: http-redirect-external
      hostname: "*.dcunha.io"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.dcunha.io"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: dcunha.io-prod
            namespace: default
            kind: Secret
